client/src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

html {
  height: 100%;
}

body {
  height: 100%;
}

#root {
  height: 100%;
}

.gameboard-grid {
  display: grid;
  grid-gap: 1vh;
  background-color: black;
  border: 1vh solid black;
}

.grid-cell {
  display: flex;
  align-items: center;
  justify-content: center;
}

.column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
}

.grid-2-horizontal {
  display: grid;
  grid-template-columns: 50% 50%;
  /* background-color: pink !important; */
}

.grid-2-horizontal-leftbias {
  display: grid;
  grid-template-columns: 80% 20%;
  /* background-color: pink !important; */
}

.grid-3-vertical-centerbias {
  display: grid;
  grid-template-rows: 10% 90% 10%;
  height: 100%;
}

.outline {
  outline: 1px black;
  outline-style: solid;
}

